--- a/index.html
+++ b/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Charles Zufan Portfolio</title>
+  <title>Charles Zufan Portfolio</title>
 </head>
 <body>
 
-<h1>Welcome to My Portfolio</h1>
+<h1>
+  Hi, I'm Charles Zufan! <br>
+  <a href="https://www.linkedin.com/in/charles-zufan-2b39b0293/">Computer Science Student</a>, 
+  <a href="https://github.com/czoof">Programmer</a>, 
+  <a href="https://www.sxu.edu">National Track Athlete</a>
+</h1>
 
-<p>My name is Charles Zufan.</p>
+<hr>
 
-<p>I am a Computer Science student and software developer.</p>
+<h2>🏆 Accomplishments:</h2>
+<ul>
+  <li>3.8 GPA, Dean’s List, National Track and Field Athlete, Scholar-Athlete</li>
+</ul>
 
-<p>This site showcases my projects and work.</p>
+<hr>
+
+<h2>🤝 Connect with Me:</h2>
+
+<p>
+  <a href="https://www.linkedin.com/in/charles-zufan-2b39b0293/" target="_blank">
+    <img alt="LinkedIn" width="30" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/linkedin.svg">
+  </a>
+
+  <a href="https://github.com/czoof" target="_blank">
+    <img alt="GitHub" width="30" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg">
+  </a>
+</p>
+
+<hr>
+
+<h2>📁 My Projects:</h2>
+<ul>
+  <li><a href="https://github.com/czoof/Meal-Grocery-Planner">Meal Grocery Planner</a></li>
+  <li><a href="https://github.com/czoof/class-assignment">Class Assignments</a></li>
+  <li><a href="https://github.com/czoof">View all my repositories</a></li>
+</ul>
+
+<hr>
+
+<p>© 2026 Charles Zufan</p>
 
 </body>
 </html>
