--- a/index.html
+++ b/index.html
@@ -2,49 +2,80 @@
 <html>
 <head>
   <title>Charles Zufan Portfolio</title>
+
+  <style>
+    body {
+      background-color: #cbb3c1;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    h1 {
+      font-size: 70px;
+      margin-top: 50px;
+    }
+
+    h2 {
+      font-size: 40px;
+      margin-top: 50px;
+    }
+
+    p {
+      font-size: 35px;
+      width: 60%;
+      margin: auto;
+      margin-top: 20px;
+      line-height: 1.5;
+    }
+
+    .buttons {
+      margin-top: 50px;
+    }
+
+    .buttons a {
+      text-decoration: none;
+      color: white;
+      background-color: #1f1f1f;
+      padding: 15px 30px;
+      border-radius: 10px;
+      margin: 15px;
+      display: inline-block;
+      font-size: 20px;
+    }
+
+    .footer {
+      margin-top: 50px;
+      font-size: 30px;
+      color: #444;
+    }
+  </style>
+
 </head>
+
 <body>
 
-<h1>
-  Hi, I'm Charles Zufan! <br>
-  <a href="https://www.linkedin.com/in/charles-zufan-2b39b0293/">Computer Science Student</a>, 
-  <a href="https://github.com/czoof">Programmer</a>, 
-  <a href="https://www.sxu.edu">National Track Athlete</a>
-</h1>
+  <h1>Welcome to My Portfolio</h1>
 
-<hr>
+  <div class="buttons">
+    <a href="https://github.com/czoof">My GitHub Repositories</a>
+    <a href="mailto:charliezufan15z@gmail.com">Contact Me</a>
+    <a href="#">My Resume</a>
+  </div>
 
-<h2>🏆 Accomplishments:</h2>
-<ul>
-  <li>3.8 GPA, Dean’s List, National Track and Field Athlete, Scholar-Athlete</li>
-</ul>
+  <h2>About Me:</h2>
 
-<hr>
+  <p>
+    My name is Charles Zufan. I am a Senior at Saint Xavier University, graduating May 2026. 
+    I am passionate about computer science and enjoy building software and solving complex problems. 
+    I am a National Track and Field Athlete and Scholar-Athlete, and I am looking forward to gaining 
+    hands-on experience and building real-world applications as I begin my career in software development.
+  </p>
 
-<h2>🤝 Connect with Me:</h2>
-
-<p>
-  <a href="https://www.linkedin.com/in/charles-zufan-2b39b0293/" target="_blank">
-    <img alt="LinkedIn" width="30" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/linkedin.svg">
-  </a>
-
-  <a href="https://github.com/czoof" target="_blank">
-    <img alt="GitHub" width="30" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg">
-  </a>
-</p>
-
-<hr>
-
-<h2>📁 My Projects:</h2>
-<ul>
-  <li><a href="https://github.com/czoof/Meal-Grocery-Planner">Meal Grocery Planner</a></li>
-  <li><a href="https://github.com/czoof/class-assignment">Class Assignments</a></li>
-  <li><a href="https://github.com/czoof">View all my repositories</a></li>
-</ul>
-
-<hr>
-
-<p>© 2026 Charles Zufan</p>
+  <div class="footer">
+    @Charles Zufan
+  </div>
 
 </body>
 </html>
