Updated portfolio layout

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
   <title>Charles Zufan Portfolio</title>
-
   <style>
     body {
-      background-color: #cbb3c1;
+      background-color: #d2b6c2;
       font-family: Arial, sans-serif;
       text-align: center;
       margin: 0;
@@ -13,69 +12,64 @@
     }
 
     h1 {
-      font-size: 70px;
-      margin-top: 50px;
-    }
-
-    h2 {
-      font-size: 40px;
-      margin-top: 50px;
-    }
-
-    p {
-      font-size: 35px;
-      width: 60%;
-      margin: auto;
-      margin-top: 20px;
-      line-height: 1.5;
+      font-size: 80px;
+      margin-top: 40px;
     }
 
     .buttons {
-      margin-top: 50px;
+      margin-top: 40px;
     }
 
     .buttons a {
-      text-decoration: none;
-      color: white;
-      background-color: #1f1f1f;
-      padding: 15px 30px;
-      border-radius: 10px;
-      margin: 15px;
       display: inline-block;
+      margin: 10px;
+      padding: 15px 25px;
+      background-color: black;
+      color: white;
+      text-decoration: none;
+      border-radius: 10px;
       font-size: 20px;
     }
 
-    .footer {
+    .about {
+      margin-top: 60px;
+      font-size: 28px;
+      width: 60%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .name {
       margin-top: 50px;
       font-size: 30px;
-      color: #444;
+      color: gray;
     }
   </style>
-
 </head>
 
 <body>
 
-  <h1>Welcome to My Portfolio</h1>
+<h1>Welcome to My Portfolio</h1>
 
-  <div class="buttons">
-    <a href="https://github.com/czoof">My GitHub Repositories</a>
-    <a href="mailto:charliezufan15z@gmail.com">Contact Me</a>
-    <a href="#">My Resume</a>
-  </div>
+<div class="buttons">
+  <a href="https://github.com/czoof">My GitHub Repositories</a>
+  <a href="mailto:charliezufan15@gmail.com">Contact Me</a>
+  <a href="#">My Resume</a>
+</div>
 
+<div class="about">
   <h2>About Me:</h2>
 
   <p>
-    My name is Charles Zufan. I am a Senior at Saint Xavier University, graduating May 2026. 
-    I am passionate about computer science and enjoy building software and solving complex problems. 
-    I am a National Track and Field Athlete and Scholar-Athlete, and I am looking forward to gaining 
-    hands-on experience and building real-world applications as I begin my career in software development.
+    My name is Charles Zufan. I am a Senior Computer Science student at Saint Xavier University, graduating May 2026.
+    I am passionate about computer science and enjoy problem solving. I love to learn and be challenged.
+    I am looking forward to gaining hands on experience in the future and making a difference in what I work on.
   </p>
+</div>
 
-  <div class="footer">
-    @Charles Zufan
-  </div>
+<div class="name">
+  @Charles Zufan
+</div>
 
 </body>
 </html>
