--- a/index.html
+++ b/index.html
@@ -2,73 +2,111 @@
 <html>
 <head>
   <title>Charles Zufan Portfolio</title>
+
   <style>
+
     body {
-      background-color: #d2b6c2;
-      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #0f172a, #1e293b);
+      color: #e2e8f0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       text-align: center;
       margin: 0;
       padding: 0;
     }
 
-    h1 {
-      font-size: 80px;
-      margin-top: 40px;
-    }
-
-    .buttons {
-      margin-top: 40px;
-    }
-
-    .buttons a {
-      display: inline-block;
-      margin: 10px;
-      padding: 15px 25px;
-      background-color: black;
-      color: white;
-      text-decoration: none;
-      border-radius: 10px;
-      font-size: 20px;
-    }
-
-    .about {
+    .container {
       margin-top: 60px;
-      font-size: 28px;
-      width: 60%;
+    }
+
+    h1 {
+      font-size: 70px;
+      margin-bottom: 10px;
+      color: #38bdf8;
+    }
+
+    .subtitle {
+      font-size: 26px;
+      color: #94a3b8;
+      margin-bottom: 40px;
+    }
+
+    .github-button {
+      display: inline-block;
+      padding: 16px 30px;
+      background: #38bdf8;
+      color: #0f172a;
+      text-decoration: none;
+      font-size: 20px;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .github-button:hover {
+      background: #0ea5e9;
+      transform: scale(1.05);
+    }
+
+    .about-section {
+      margin-top: 70px;
+      max-width: 700px;
       margin-left: auto;
       margin-right: auto;
     }
 
-    .name {
-      margin-top: 50px;
-      font-size: 30px;
-      color: gray;
+    .about-title {
+      font-size: 36px;
+      margin-bottom: 15px;
+      color: #38bdf8;
     }
+
+    .about-text {
+      font-size: 22px;
+      line-height: 1.6;
+      color: #cbd5e1;
+    }
+
+    .footer {
+      margin-top: 80px;
+      font-size: 18px;
+      color: #64748b;
+    }
+
   </style>
+
 </head>
 
 <body>
 
-<h1>Welcome to My Portfolio</h1>
+<div class="container">
 
-<div class="buttons">
-  <a href="https://github.com/czoof">My GitHub Repositories</a>
-  <a href="mailto:charliezufan15@gmail.com">Contact Me</a>
-  <a href="#">My Resume</a>
-</div>
+  <h1>Charles Zufan</h1>
 
-<div class="about">
-  <h2>About Me:</h2>
+  <div class="subtitle">
+    Computer Science Student • Backend Developer • Track Athlete
+  </div>
 
-  <p>
-    My name is Charles Zufan. I am a Senior Computer Science student at Saint Xavier University, graduating May 2026.
-    I am passionate about computer science and enjoy problem solving. I love to learn and be challenged.
-    I am looking forward to gaining hands on experience in the future and making a difference in what I work on.
-  </p>
-</div>
+  <a class="github-button" href="https://github.com/czoof" target="_blank">
+    View My GitHub Projects
+  </a>
 
-<div class="name">
-  @Charles Zufan
+  <div class="about-section">
+
+    <div class="about-title">About Me</div>
+
+    <div class="about-text">
+      I am a Senior Computer Science student at Saint Xavier University graduating May 2026.
+      I focus on backend development, databases, and building full-stack applications.
+      I enjoy solving complex problems, learning new technologies, and continuously improving my skills.
+      My goal is to become a professional software engineer and contribute to meaningful projects.
+    </div>
+
+  </div>
+
+  <div class="footer">
+    © 2026 Charles Zufan
+  </div>
+
 </div>
 
 </body>
