--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Charles Zufan Portfolio</title>
 
 <style>
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #0f172a, #1e3a8a);
-    color: white;
+    background: linear-gradient(135deg, #0f172a, #1e3a5f);
+    color: #e5e7eb;
     text-align: center;
 }
 
 .container {
+    max-width: 900px;
+    margin: auto;
     padding: 60px 20px;
 }
 
@@ -31,85 +34,85 @@ h1 {
 
 .button {
     display: inline-block;
-    margin: 10px;
+    margin: 20px 0;
     padding: 14px 28px;
-    background-color: #60a5fa;
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
+    font-size: 18px;
+    color: white;
+    background: #3b82f6;
     border-radius: 8px;
+    text-decoration: none;
     transition: 0.3s;
 }
 
 .button:hover {
-    background-color: #3b82f6;
+    background: #2563eb;
 }
 
 .section {
     margin-top: 50px;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .section h2 {
+    font-size: 30px;
+    margin-bottom: 15px;
     color: #60a5fa;
 }
 
-.projects a,
-.contact a {
+.section p {
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+.links a {
     display: block;
-    margin: 10px;
     color: #93c5fd;
+    margin: 6px 0;
     text-decoration: none;
 }
 
-.projects a:hover,
-.contact a:hover {
+.links a:hover {
     text-decoration: underline;
 }
 
 footer {
     margin-top: 60px;
     padding: 20px;
-    background-color: rgba(0,0,0,0.3);
-    color: #cbd5e1;
+    font-size: 14px;
+    color: #94a3b8;
 }
 </style>
 
 </head>
-
 <body>
 
 <div class="container">
 
 <h1>Charles Zufan</h1>
 
-<div class="subtitle">
+<p class="subtitle">
 Computer Science Student • Backend Developer • Track Athlete
-</div>
+</p>
 
 <a class="button" href="https://github.com/czoof" target="_blank">
-View My GitHub
-</a>
-
-<a class="button" href="Resume.pdf" target="_blank">
-View My Resume
+View My GitHub Projects
 </a>
 
 <div class="section">
 <h2>About Me</h2>
 
 <p>
-I am a Senior Computer Science student at Saint Xavier University graduating May 2026. 
-I specialize in backend development, databases, and full-stack applications. 
-I enjoy building software, solving complex problems, and continuously improving my technical skills. 
+I am a Senior Computer Science student at Saint Xavier University graduating May 2026.
+I focus on backend development, databases, and building full-stack applications.
+I enjoy solving complex problems, learning new technologies, and continuously improving my skills.
 My goal is to become a professional software engineer and contribute to meaningful projects.
 </p>
+
 </div>
 
-<div class="section projects">
-<h2>My Projects</h2>
+<div class="section">
+<h2>Projects</h2>
+
+<div class="links">
 
 <a href="https://github.com/czoof/Coding-Projects" target="_blank">
 Coding Projects Repository
@@ -119,25 +122,32 @@ Coding Projects Repository
 Meal Grocery Planner Project
 </a>
 
-<a href="https://github.com/czoof" target="_blank">
-View All GitHub Repositories
-</a>
+</div>
 
 </div>
 
-<div class="section contact">
-<h2>Contact Information</h2>
+<div class="section">
+<h2>Contact</h2>
 
-<a href="mailto:charleszufan@gmail.com">
-Email: charleszufan@gmail.com
+<div class="links">
+
+<a href="mailto:charleszufan15z@gmail.com">
+charleszufan15z@gmail.com
 </a>
 
 <a href="https://www.linkedin.com/in/charles-zufan-2b39b0293/" target="_blank">
 LinkedIn Profile
 </a>
 
-<a href="https://github.com/czoof" target="_blank">
-GitHub Profile
+</div>
+
+</div>
+
+<div class="section">
+<h2>Resume</h2>
+
+<a class="button" href="Resume.pdf" target="_blank">
+Download My Resume
 </a>
 
 </div>
